RESOLVED FIXED134812
ASSERT in SharedBuffer::maybeAppendDataArray() on MobileSafari launch
https://bugs.webkit.org/show_bug.cgi?id=134812
Summary ASSERT in SharedBuffer::maybeAppendDataArray() on MobileSafari launch
Pratik Solanki
Reported 2014-07-10 13:29:47 PDT
ASSERT in SharedBuffer::maybeAppendDataArray() on MobileSafari launch
Attachments
Patch (1.92 KB, patch)
2014-07-10 13:40 PDT, Pratik Solanki
joepeck: review+
Pratik Solanki
Comment 1 2014-07-10 13:40:09 PDT
Joseph Pecoraro
Comment 2 2014-07-10 13:42:05 PDT
Comment on attachment 234723 [details] Patch r=me
Pratik Solanki
Comment 3 2014-07-10 13:49:16 PDT
Note You need to log in before you can comment on or make changes to this bug.